<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_dashboard" />

        <item
            android:id="@+id/nav_random_exercise"
            android:icon="@drawable/ic_shuffle"
            android:title="@string/nav_random_exercise" />

        <item
            android:id="@+id/nav_progress_overview"
            android:icon="@drawable/ic_chart"
            android:title="@string/nav_progress_overview" />

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_chart"
            android:title="@string/nav_statistics" />
    </group>

    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
